--- a/package.json
+++ b/package.json
@@ -16,43 +16,42 @@
   "license": "PHP-3.01",
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.1.1",
+    "@babel/polyfill": "^7.0.0",
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.1",
-    "vue": "^2.5.16",
+    "popper.js": "^1.14.4",
+    "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "compression-webpack-plugin": "^1.1.11",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-loader": "^8.0.0",
+    "ajv": "^6.5.3",
+    "autoprefixer": "^8.6.5",
+    "compression-webpack-plugin": "^1.1.12",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
-    "less": "^3.0.4",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "postcss-loader": "^2.1.3",
+    "postcss-loader": "^2.1.6",
     "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
+    "url-loader": "^1.1.1",
     "vue-hot-reload-api": "^2.3.0",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^14.2.2",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2",
-    "webpack-merge": "^4.1.2",
-    "ajv": "^6.4.0"
+    "webpack-dev-server": "^2.11.3",
+    "webpack-merge": "^4.1.4"
   },
   "browserslist": [
     "> 1%",
